--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "2dom",
+  "name": "event",
   "version": "1.0.0",
   "description": "![CI](https://github.com/0anastasia/continuousDeployment/actions/workflows/web.yml/badge.svg)",
   "main": "index.js",
@@ -35,6 +35,7 @@
     "core-js": "^3.31.1",
     "css-minimizer-webpack-plugin": "^5.0.1",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "webpack-merge": "^5.9.0"
